--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.jboss</groupId>
         <artifactId>jboss-parent</artifactId>
-        <version>5</version>
+        <version>8</version>
     </parent>
     <groupId>org.jboss.capedwarf.blue</groupId>
     <artifactId>capedwarf-build</artifactId>
@@ -50,7 +50,6 @@
         <version.com.google.guava>11.0.2</version.com.google.guava>
         <version.json>20090211</version.json>
         <version.org.apache.velocity>1.6.3</version.org.apache.velocity>
-        <version.org.jboss.seam>3.0.0.Final</version.org.jboss.seam>
         <version.org.jboss.logging>3.1.0.GA</version.org.jboss.logging>
         <version.org.jboss.modules.jboss-modules>1.1.1.GA</version.org.jboss.modules.jboss-modules>
         <version.org.jboss.xnio.xnio-api>3.0.3.GA</version.org.jboss.xnio.xnio-api>
@@ -60,15 +59,15 @@
         <version.org.picketlink>2.0.2.Final</version.org.picketlink>
         <version.org.picketlink.consolidated.social>2.0.0.Beta1</version.org.picketlink.consolidated.social>
         <version.javassist>3.15.0-GA</version.javassist>
-        <version.slf4j>1.6.1</version.slf4j>
+        <version.slf4j>1.6.4</version.slf4j>
         <version.javax.validation>1.0.0.GA</version.javax.validation>
         <version.javax.servlet.jsp>2.1</version.javax.servlet.jsp>
-        <version.javax.faces.api>2.0.0.Beta1</version.javax.faces.api>
+        <version.javax.faces.api>2.1</version.javax.faces.api>
         <version.javax.faces.impl>2.1.3-b02-jbossorg-2</version.javax.faces.impl>
         <version.javax.el>1.2</version.javax.el>
         <version.javax.el.impl>1.2</version.javax.el.impl>
         <version.javax.cache>1.0-dev-2</version.javax.cache>
-        <version.javax.mail>1.4</version.javax.mail>
+        <version.javax.mail>1.4.4</version.javax.mail>
         <version.javax.jpa2>1.0.0.Final</version.javax.jpa2>
         <version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>1.0.0.Final</version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>
         <version.org.datanucleus.core>1.1.5</version.org.datanucleus.core>
@@ -76,15 +75,16 @@
         <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
         <version.org.datanucleus.gae>1.0.10</version.org.datanucleus.gae>
         <version.org.datanucleus.jdo>2.3-eb</version.org.datanucleus.jdo>
-        <version.org.hibernate.search>4.1.0.Beta1</version.org.hibernate.search>
-        <version.org.infinispan>5.1.2.FINAL</version.org.infinispan>
+        <version.org.hibernate.search>4.1.0.CR3</version.org.hibernate.search>
+        <version.org.infinispan>5.1.3.FINAL</version.org.infinispan>
         <version.net.jcip>1.0</version.net.jcip>
         <version.junit>4.7</version.junit>
         <version.arquillian>1.0.0.CR7</version.arquillian>
-        <version.jboss.as7>7.1.0.Final</version.jboss.as7>
+        <version.jboss.as7>7.1.1.Final</version.jboss.as7>
         <version.jboss.maven.transformer>1.0.0-SNAPSHOT</version.jboss.maven.transformer>
         <version.metainf>1.1</version.metainf>
         <version.org.apache.httpcomponents>4.1.1</version.org.apache.httpcomponents>
+        <version.asm>3.3.1</version.asm>
     </properties>
 
     <build>
@@ -93,8 +93,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
                     <debug>true</debug>
                     <encoding>UTF-8</encoding>
                     <fork>true</fork>
@@ -104,7 +102,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.0-beta-9</version>
+                <version>2.2.2</version>
                 <configuration>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
@@ -352,15 +350,8 @@
                 <version>${version.com.google.guava}</version>
             </dependency>
 
-            <!-- Seam3 -->
 
-            <dependency>
-                <groupId>org.jboss.seam</groupId>
-                <artifactId>seam-bom</artifactId>
-                <version>${version.org.jboss.seam}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
+
 
             <dependency>
                 <groupId>org.picketlink</groupId>
@@ -644,14 +635,18 @@
                 <artifactId>arquillian-protocol-servlet</artifactId>
                 <version>${version.arquillian}</version>
             </dependency>
+            <dependency>
+                <groupId>asm</groupId>
+                <artifactId>asm</artifactId>
+                <version>${version.asm}</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
 
     <scm>
         <connection>scm:git:git://github.com/capedwarf/capedwarf-blue.git</connection>
-        <developerConnection>scm:git:git://github.com/capedwarf/capedwarf-blue.git
-        </developerConnection>
+        <developerConnection>scm:git:git://github.com/capedwarf/capedwarf-blue.git</developerConnection>
         <url>scm:git:git://github.com/capedwarf/capedwarf-blue.git</url>
     </scm>
 
