--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -19,12 +19,19 @@
             <plugin>
                 <groupId>org.datanucleus</groupId>
                 <artifactId>maven-datanucleus-plugin</artifactId>
-                <version>2.0.1</version>
+                <version>3.0.2</version>
                 <configuration>
                     <metadataIncludes>org/jboss/capedwarf/testsuite/jpa/*.class</metadataIncludes>
                     <verbose>true</verbose>
                     <api>JPA</api>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.datanucleus</groupId>
+                        <artifactId>datanucleus-api-jpa</artifactId>
+                        <version>3.0.4</version>
+                    </dependency>
+                </dependencies>
                 <executions>
                     <execution>
                         <phase>process-classes</phase>
