--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -73,6 +73,11 @@
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity</artifactId>
         </dependency>
+        
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-tools</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.xerial</groupId>
