--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
         <version.json>20090211</version.json>
         <version.org.apache.lucene>3.6.2</version.org.apache.lucene>
         <version.org.apache.velocity>1.6.3</version.org.apache.velocity>
+        <version.org.apache.velocity-tool>2.0</version.org.apache.velocity-tool>
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
         <version.org.jboss.logging>3.1.2.GA</version.org.jboss.logging>
         <version.org.jboss.modules.jboss-modules>1.2.0.CR1</version.org.jboss.modules.jboss-modules>
@@ -519,6 +520,12 @@
                 <groupId>org.apache.velocity</groupId>
                 <artifactId>velocity</artifactId>
                 <version>${version.org.apache.velocity}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.velocity</groupId>
+                <artifactId>velocity-tools</artifactId>
+                <version>${version.org.apache.velocity-tool}</version>
             </dependency>
 
             <dependency>
