--- a/bytecode/pom.xml
+++ b/bytecode/pom.xml
@@ -14,6 +14,38 @@
     <url>http://www.jboss.org/capedwarf</url>
     <description>CapeDwarf Bytecode</description>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <artifactSet>
+                                <includes>
+                                    <include>com.google.appengine:appengine-tools-sdk</include>
+                                </includes>
+                            </artifactSet>
+                            <filters>
+                                <filter>
+                                    <artifact>com.google.appengine:appengine-tools-sdk</artifact>
+                                    <includes>
+                                        <include>com/google/apphosting/runtime/security/WhiteList.class</include>
+                                    </includes>
+                                </filter>
+                            </filters>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
 
         <dependency>
