--- a/pom.xml
+++ b/pom.xml
@@ -89,8 +89,8 @@
         <!-- Testing -->
         <version.junit>4.10</version.junit>
         <version.arquillian>1.0.3.Final</version.arquillian>
-        <version.shrinkwrap>1.1.0</version.shrinkwrap>
-        <version.shrinkwrap.maven-resolver>2.0.0-alpha-4</version.shrinkwrap.maven-resolver>
+        <version.shrinkwrap>1.1.2</version.shrinkwrap>
+        <version.shrinkwrap.maven-resolver>2.0.0-beta-3</version.shrinkwrap.maven-resolver>
         <version.jboss.as7>7.2.0.Final</version.jboss.as7>
         <version.org.jboss.xnio>3.0.7.GA</version.org.jboss.xnio>
         <version.arquillian.gae>1.0.0.Alpha8</version.arquillian.gae>
